--- a/Sparkt.WebApp/Views/Shared/_Layout.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_Layout.cshtml
@@ -211,7 +211,7 @@
                 <p id="pThankYouMessage"></p>
             </div>
         </div>
-        <div class="overlay-wrapp"></div>
+        @*<div class="overlay-wrapp"></div>*@
         @*<div id="divThankYouModal" class="modal thank-u-modal">
             <div class="modal-content  ">
                 <figure>
