--- a/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
@@ -3,33 +3,33 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
+    <title>@ViewBag.Title</title>   
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+  
     <link rel="icon" type="image/png" sizes="16x16" href="~/Content/work/images/fevicon.png">
     <meta name="author" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai">
     <meta name="keywords" content="digital agency, creative agency, SMO, SEO, SEM, programmatic media buying, analytics, website design, website development">
-    <meta name="description" content="Sparkt is a collaboration of data sciences and emotional intelligence to bridge need gaps with creative and experiential solutions both for brands and consumers.">
+    <meta name="description" content="@ViewBag.MetaDescription">
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="SparktIndia">
-    <meta name="twitter:title" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai">
-    <meta name="twitter:description" content="Sparkt is a collaboration of data sciences and emotional intelligence to bridge need gaps with creative and experiential solutions both for brands and consumers.">
+    <meta name="twitter:title" content="Sparkt Work | @ViewBag.MetaTitle">
+    <meta name="twitter:description" content="@ViewBag.MetaDescription">
     <meta name="twitter:creator" content="SparktIndia">
-    <meta name="twitter:image" content="~/Content/images/spaktLogoFB.jpg" />
+    <meta name="twitter:image" content="@ViewBag.MetaImage" />
     <!-- Open Graph data -->
-    <meta property="og:title" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai" />
-    <meta property="og:url" content="http://www.sparkt.in" />
-    <meta property="og:description" content="Sparkt is a collaboration of data sciences and emotional intelligence to bridge need gaps with creative and experiential solutions both for brands and consumers." />
+    <meta property="og:title" content="Sparkt Work |  @ViewBag.MetaTitle" />
+    <meta property="og:url" content="@ViewBag.MetaURL"/>
+    <meta property="og:description" content="@ViewBag.MetaDescription" />
     <meta property="og:site_name" content="Sparkt India" />
     <meta property="og:type" content="website" />
     <meta property="fb:admins" content="306588899709911" />
-    <meta property="og:image" content="~/Content/images/spaktLogoFB.jpg" />
+    <meta property="og:image" content="@ViewBag.MetaImage" />
     <!-- Schema.org markup for Google+ -->
-    <meta itemprop="name" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai">
-    <meta itemprop="description" content="Sparkt is a collaboration of data sciences and emotional intelligence to bridge need gaps with creative and experiential solutions both for brands and consumers.">
+    <meta itemprop="name" content="Sparkt Work | @ViewBag.MetaTitle">
+    <meta itemprop="description" content="@ViewBag.MetaDescription">
     <!-- CSS -->
     <link type="text/css" rel="stylesheet" media="screen,projection" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/css/reset.css" />
