--- a/Sparkt.WebApp/Views/work/DancePlus2.cshtml
+++ b/Sparkt.WebApp/Views/work/DancePlus2.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | Dance+2";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "Dance+2";
+    ViewBag.MetaDescription = "Getting the nation to dance to our tune with <br>video innovations and thumbstopping content";
+    ViewBag.MetaURL = "http://sparkt.in/work/DancePlus2";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/danceplus-thum.jpg";
 }
 
 <main>
@@ -29,7 +33,7 @@
 
             </ul>
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
     </div>
     <div class="section">
         <div class="head-title floated ">
