--- a/Sparkt.WebApp/Views/work/Dhoni.cshtml
+++ b/Sparkt.WebApp/Views/work/Dhoni.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | M.S. Dhoni - The Untold Story";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "M.S. Dhoni - The Untold Story";
+    ViewBag.MetaDescription = "Thumb-stopping digital campaign to build excitement for World Television Premiere";
+    ViewBag.MetaURL = "http://sparkt.in/work/Dhoni";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ms-dhoni-thum.jpg";
 }
 
 <main>
@@ -25,7 +29,7 @@
                 <span>Thumb-stopping digital campaign to build excitement for World Television Premiere</span>
             </div>           
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
 
     </div>
     <div class="section">
