--- a/Sparkt.WebApp/Views/work/Ikyawann.cshtml
+++ b/Sparkt.WebApp/Views/work/Ikyawann.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | Ikyawann";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "Ikyawann";
+    ViewBag.MetaDescription = "Not a shaadi material";
+    ViewBag.MetaURL = "http://sparkt.in/work/Ikyawann";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ikyawann-thum.jpg";
 }
 
 <main>
@@ -29,7 +33,7 @@
                 <li class="tooltip" title="CIDCA    : Viral Marketing Campaign - Bronze"><img src="~/Content/work/images/awards/cidca-2018-bronze.png" class="responsive-img" alt="" /> </li>
             </ul>
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
       
     </div>
     <div class="section">
