--- a/Sparkt.WebApp/Views/work/Khichdi.cshtml
+++ b/Sparkt.WebApp/Views/work/Khichdi.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | Khichdi";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "Khichdi";
+    ViewBag.MetaDescription = "Digital exclusive content to introduce iconic characters";
+    ViewBag.MetaURL = "http://sparkt.in/work/Khichdi";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/khichadi-thum.jpg";
 }
 
 <main>
@@ -29,7 +33,7 @@
                 <span>Digital exclusive content to <br>introduce iconic characters</span>
             </div>
         </div>
-      @Html.Partial("_WorkMenu");
+      @Html.Partial("_WorkMenu")
     </div>
     <div class="section">
         <div class="head-title floated ">
