--- a/Sparkt.WebApp/Views/work/Kullfi.cshtml
+++ b/Sparkt.WebApp/Views/work/Kullfi.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | Kulfi";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "Kulfi";
+    ViewBag.MetaDescription = "She sings about anything!";
+    ViewBag.MetaURL = "http://sparkt.in/work/Kullfi";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/kullfi-thum.jpg";
 }
 
 <main>
@@ -25,7 +29,7 @@
                 <span>She sings about anything!</span>
             </div>
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
     </div>
     <div class="section">
         <div class="head-title floated ">
