--- a/Sparkt.WebApp/Views/work/MahindraBadhatYojana.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraBadhatYojana.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | MMF BADHAT YOJANA";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "MMF BADHAT YOJANA";
+    ViewBag.MetaDescription = "Exploring how richness is measured in Indian society";
+    ViewBag.MetaURL = "http://sparkt.in/work/MahindraBadhatYojana";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/badhat-yojana-thum.jpg";
 }
 
 <main>
@@ -22,7 +26,7 @@
                 <span>Exploring how richness is measured in Indian society</span>
             </div>           
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
 
     </div>
     <div class="section ">
