--- a/Sparkt.WebApp/Views/work/MahindraTah.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraTah.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | Kar Bachat Yojana";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "Kar Bachat Yojana";
+    ViewBag.MetaDescription = "Igniting a national debate on Taxes Acche Hain ahead of Budget 2017";
+    ViewBag.MetaURL = "http://sparkt.in/work/MahindraTah";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/tah-thum.jpg";
 }
 
 <main>
@@ -29,7 +33,7 @@
 
             </ul>
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
     </div>
     <div class="section">
         <div class="head-title floated ">
