--- a/Sparkt.WebApp/Views/work/NachBaliye8.cshtml
+++ b/Sparkt.WebApp/Views/work/NachBaliye8.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | Nach Baliye 8";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "Nach Baliye 8";
+    ViewBag.MetaDescription = "Bringing alive the Romance-wala Dance";
+    ViewBag.MetaURL = "http://sparkt.in/work/NachBaliye8";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/nach-baliye-8-thum.jpg";
 }
 
 <main>
@@ -25,7 +29,7 @@
                 <span>Bringing alive the 'Romance-wala Dance'</span>
             </div>         
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
     </div>
     <div class="section">
         <div class="head-title floated ">
