--- a/Sparkt.WebApp/Views/work/NayiSoch.cshtml
+++ b/Sparkt.WebApp/Views/work/NayiSoch.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | Nayi Soch";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "Nayi Soch";
+    ViewBag.MetaDescription = "Wear your Mothers name with pride";
+    ViewBag.MetaURL = "http://sparkt.in/work/NayiSoch";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/nayosoch-thum.jpg";
 }
 
 <main>
@@ -39,7 +43,7 @@
 
             </ul>
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
       
     </div>
     <div class="section">
