--- a/Sparkt.WebApp/Views/work/OnePlus.cshtml
+++ b/Sparkt.WebApp/Views/work/OnePlus.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | OnePlus";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "OnePlus";
+    ViewBag.MetaDescription = "The power of 5 in customer care";
+    ViewBag.MetaURL = "http://sparkt.in/work/OnePlus";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/oneplus-thum.jpg";
 }
 
 <main>
@@ -25,7 +29,7 @@
                 <span>The power of 5 in customer care</span>
             </div>            
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
     </div>
     <div class="section">
         <div class="head-title floated ">
