--- a/Sparkt.WebApp/Views/work/PiramalCapital.cshtml
+++ b/Sparkt.WebApp/Views/work/PiramalCapital.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | Piramal Capital";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "Piramal Capital";
+    ViewBag.MetaDescription = "Values create value";
+    ViewBag.MetaURL = "http://sparkt.in/work/PiramalCapital";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/piramalcapital-thum.jpg";
 }
 
 <main>
@@ -19,7 +23,7 @@
                 <span>Values create value</span>
             </div>           
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
 
         
     </div>
