--- a/Sparkt.WebApp/Views/work/Pow.cshtml
+++ b/Sparkt.WebApp/Views/work/Pow.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | POW - Bandi Yuddh Ke";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "POW - Bandhi Yuddh Ke";
+    ViewBag.MetaDescription = "A first-of-a-kind banner that created true 'shock' value";
+    ViewBag.MetaURL = "http://sparkt.in/work/Pow";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/pow-thum.jpg";
 }
 
 <main>
@@ -35,7 +39,7 @@
                 <li class="tooltip" title="IAMAI: Best Display Campaign - Silver"><img src="~/Content/work/images/awards/iamai-silver.png" class="responsive-img" alt="" /> </li>
             </ul>
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
        
     </div>
     <div class="section">
