--- a/Sparkt.WebApp/Views/work/TedGoogleCards.cshtml
+++ b/Sparkt.WebApp/Views/work/TedGoogleCards.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | TED TALKS Google Cards";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "TED TALKS Google Cards";
+    ViewBag.MetaDescription = "Google Cards";
+    ViewBag.MetaURL = "http://sparkt.in/work/TedGoogleCards";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ted-thum.jpg";
 }
 
 <main>
@@ -28,7 +32,7 @@
 
 
 
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
     </div>
     <div class="section">
         <div class="head-title floated ">
