--- a/Sparkt.WebApp/Views/work/Tgilc.cshtml
+++ b/Sparkt.WebApp/Views/work/Tgilc.cshtml
@@ -1,7 +1,11 @@
 ﻿
 @{
-    ViewBag.Title = "Sparkt Work | TGILC";
+    ViewBag.Title = "Sparkt Work | The Great Indian Laughter Challenge";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "The Great Indian Laughter Challenge";
+    ViewBag.MetaDescription = "Getting the nation to join in on a laughter riot with thumbstopping content";
+    ViewBag.MetaURL = "http://sparkt.in/work/Tgilc";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/tgilc-thum.jpg";
 }
 
 <main>
@@ -32,7 +36,7 @@
                 <span>Getting the nation to join in on a laughter riot with thumbstopping content</span>
             </div>
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
     </div>
     <div class="section">
         <div class="head-title floated ">
