--- a/Sparkt.WebApp/Views/work/UCypherInstafight.cshtml
+++ b/Sparkt.WebApp/Views/work/UCypherInstafight.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | UCypher - Insta Fight";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "UCypher";
+    ViewBag.MetaDescription = "Insta Fight";
+    ViewBag.MetaURL = "http://sparkt.in/work/UCypher";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ucypher-thum.jpg";
 }
 
 <main>
@@ -19,7 +23,7 @@
                 <span>Insta Fight</span>
             </div>           
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
     </div>
     <div class="section ">
         <div class="head-title floated ">
