--- a/Sparkt.WebApp/Views/work/UCypherUseOfDataMS.cshtml
+++ b/Sparkt.WebApp/Views/work/UCypherUseOfDataMS.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "UCypher - Use Of Data Marketing Sciences";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "UCypher";
+    ViewBag.MetaDescription = "Use Of Data Marketing Sciences";
+    ViewBag.MetaURL = "http://sparkt.in/work/UCypherUseOfDataMS";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ucypher-thum.jpg";
 }
 
 <main>
@@ -32,7 +36,7 @@
             <li class="tooltip" title="ABBYS: 18.B Youth Marketing - Silver"><img src="images/awards/abbys-silver.png" class="responsive-img" alt=""/> </li>
           </ul>
           </div>-->
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
     </div>
     <div class="section">
         <div class="head-title floated ">
