--- a/Sparkt.WebApp/Views/work/bql.cshtml
+++ b/Sparkt.WebApp/Views/work/bql.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | Boutique Living";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "Boutique Living";
+    ViewBag.MetaDescription = "Bringing a world-conquering brand to its homeland in India";
+    ViewBag.MetaURL = "http://sparkt.in/work/bql";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/boutique-thum.jpg";
 }
 
 <main>
