--- a/Sparkt.WebApp/Views/work/HSPUBHMedia.cshtml
+++ b/Sparkt.WebApp/Views/work/HSPUBHMedia.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | Har Shaakh Pe Ullu Baithaa Hai";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "Har Shaakh Pe Ullu Baithaa Hai";
+    ViewBag.MetaDescription = "Kya Ullu Banaya";
+    ViewBag.MetaURL = "http://sparkt.in/work/HSPUBHMedia";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/hsubh-thum.jpg";
 }
 
 <main>
@@ -22,7 +26,7 @@
                 <span>Kya Ullu Banaya!</span>
             </div>
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
     </div>
     <div class="section">
         <div class="head-title floated ">
