--- a/Sparkt.WebApp/Views/work/IndiaRF.cshtml
+++ b/Sparkt.WebApp/Views/work/IndiaRF.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | India RF";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "India RF";
+    ViewBag.MetaDescription = "One Vision. 2x the Impact.";
+    ViewBag.MetaURL = "http://sparkt.in/work/IndiaRF";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/india-rf-thum.jpg";
 }
 
 <main>
@@ -19,7 +23,7 @@
                 <span>One Vision. 2x the Impact.</span>
             </div>           
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
     </div>
     <div class="section">
         <div class="head-title floated ">
