--- a/Sparkt.WebApp/Views/work/IshqBaaaz.cshtml
+++ b/Sparkt.WebApp/Views/work/IshqBaaaz.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | Ishqbaaaz";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "Ishqbaaaz";
+    ViewBag.MetaDescription = "Bringing alive the characters of the three brothers and their special bond with exclusive digital content";
+    ViewBag.MetaURL = "http://sparkt.in/work/IshqBaaaz";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ishqbaaaz-thum.jpg";
 }
 
 <main>
@@ -25,7 +29,7 @@
                 <span>Bringing alive the characters of the three brothers and their special bond with exclusive digital content</span>
             </div>           
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
     </div>
     <div class="section">
         <div class="head-title floated ">
