--- a/Sparkt.WebApp/Views/work/JungleBook.cshtml
+++ b/Sparkt.WebApp/Views/work/JungleBook.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | The Jungle Book";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "The Jungle Book";
+    ViewBag.MetaDescription = "Bringing alive the characters of the three brothers and their special bond with exclusive digital content";
+    ViewBag.MetaURL = "http://sparkt.in/work/JungleBook";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/junglebook-thum.jpg";
 }
 
 <main>
@@ -22,7 +26,7 @@
                 <span>Building anticipation for World Television Premiere through a distinctive digital experiential campaign</span>
             </div>          
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
 
         
     </div>
