--- a/Sparkt.WebApp/Views/work/MadeByMom.cshtml
+++ b/Sparkt.WebApp/Views/work/MadeByMom.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | Made By Mom";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "Made By Mom";
+    ViewBag.MetaDescription = "Igniting a Nayi Soch on Mother’s Day";
+    ViewBag.MetaURL = "http://sparkt.in/work/MadeByMom";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/mouthers-day-thum.jpg";
 }
 
 <main>
@@ -22,7 +26,7 @@
                 <span>Igniting a Nayi Soch on Mother’s Day</span>
             </div>           
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
 
  
     </div>
