--- a/Sparkt.WebApp/Views/work/MahindraNfoLaunches.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraNfoLaunches.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | MMF NFO Launches";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = " MMF NFO Launches";
+    ViewBag.MetaDescription = "Seamless integration of traditional and digital media.";
+    ViewBag.MetaURL = "http://sparkt.in/work/MahindraNfoLaunches";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/mmf-info-thum.jpg";
 }
 
 <main>
@@ -20,7 +24,7 @@
                 <span>Seamless integration of traditional and digital media.</span>
             </div>          
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
 
       
     </div>
