--- a/Sparkt.WebApp/Views/work/MahindraUnnati.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraUnnati.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | Mahindra - Unnati Emerging Business Yojana";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "Unnati Emerging Business Yojana";
+    ViewBag.MetaDescription = "Samay se Aagey";
+    ViewBag.MetaURL = "http://sparkt.in/work/MahindraUnnati";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/mahindra-unnati-thum.jpg";
 }
 
 <main>
@@ -25,7 +29,7 @@
                 <span>Samay se Aagey</span>
             </div>           
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
     </div>
     <div class="section ">
         <div class="head-title floated ">
