--- a/Sparkt.WebApp/Views/work/Phfl.cshtml
+++ b/Sparkt.WebApp/Views/work/Phfl.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | Piramal Housing Finance";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "Piramal Housing Finance";
+    ViewBag.MetaDescription = "A customer-first approach to home loans";
+    ViewBag.MetaURL = "http://sparkt.in/work/Phfl";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/phfl-thum.jpg";
 }
 
 <main>
@@ -20,7 +24,7 @@
               
             </div>           
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
 
         
     </div>
