--- a/Sparkt.WebApp/Views/work/TextMoji.cshtml
+++ b/Sparkt.WebApp/Views/work/TextMoji.cshtml
@@ -2,6 +2,11 @@
 @{
     ViewBag.Title = "Sparkt Work | Text Moji";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "Text Moji";
+    ViewBag.MetaDescription = "ELEVATING MAHINDRA MUTUAL FUND'S BRAND COMMUNICATION EXPERIENCE IN THE SMS INBOX!";
+    ViewBag.MetaURL = "http://sparkt.in/work/TextMoji";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/textmoji-thum.jpg";
+}
 }
 
 <main>
@@ -29,7 +34,7 @@
                 <li class="tooltip" title="CIDCA: Mobile - SMS"><img src="~/Content/work/images/awards/cidca-2018-gold.png" class="responsive-img" alt="" /> </li>
             </ul>
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
     </div>
     <div class="section ">
         <div class="head-title floated ">
