--- a/Sparkt.WebApp/Views/work/UCypher.cshtml
+++ b/Sparkt.WebApp/Views/work/UCypher.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | UCypher";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "UCypher";
+    ViewBag.MetaDescription = "Naya Sport. Naye Superstars.";
+    ViewBag.MetaURL = "http://sparkt.in/work/UCypher";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ucypher-thum.jpg";
 }
 
 <main>
@@ -32,7 +36,7 @@
                 <li class="tooltip" title="ABBYS: 18.B Youth Marketing - Silver"><img src="~/Content/work/images/awards/abbys-silver.png" class="responsive-img" alt="" /> </li>
             </ul>
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
        
     </div>
     <div class="section">
