--- a/Sparkt.WebApp/Views/work/USportsScratch.cshtml
+++ b/Sparkt.WebApp/Views/work/USportsScratch.cshtml
@@ -2,6 +2,10 @@
 @{
     ViewBag.Title = "Sparkt Work | USports - Scratch";
     Layout = "~/Views/Shared/_LayoutWork.cshtml";
+    ViewBag.MetaTitle = "USports - Scratch";
+    ViewBag.MetaDescription = "Scratch to unlock the website";
+    ViewBag.MetaURL = "http://sparkt.in/work/USportsScratch";
+    ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/usports-scratch-thum.jpg";
 }
 
 <main>
@@ -27,7 +31,7 @@
                 <span>Scratch to unlock the website</span>
             </div>
         </div>
-        @Html.Partial("_WorkMenu");
+        @Html.Partial("_WorkMenu")
 
 
     </div>
