--- a/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
@@ -9,21 +9,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   
     <link rel="icon" type="image/png" sizes="16x16" href="~/Content/work/images/fevicon.png">
-    <meta name="author" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai">
+    <meta name="author" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai, India">
     <meta name="keywords" content="digital agency, creative agency, SMO, SEO, SEM, programmatic media buying, analytics, website design, website development">
     <meta name="description" content="@ViewBag.MetaDescription">
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="SparktIndia">
+    <meta name="twitter:site" content="Sparkt">
     <meta name="twitter:title" content="Sparkt Work | @ViewBag.MetaTitle">
     <meta name="twitter:description" content="@ViewBag.MetaDescription">
-    <meta name="twitter:creator" content="SparktIndia">
+    <meta name="twitter:creator" content="Sparkt">
     <meta name="twitter:image" content="@ViewBag.MetaImage" />
     <!-- Open Graph data -->
     <meta property="og:title" content="Sparkt Work |  @ViewBag.MetaTitle" />
     <meta property="og:url" content="@ViewBag.MetaURL"/>
     <meta property="og:description" content="@ViewBag.MetaDescription" />
-    <meta property="og:site_name" content="Sparkt India" />
+    <meta property="og:site_name" content="Sparkt" />
     <meta property="og:type" content="website" />
     <meta property="fb:admins" content="306588899709911" />
     <meta property="og:image" content="@ViewBag.MetaImage" />
