--- a/Sparkt.WebApp/Views/Shared/_Layout.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_Layout.cshtml
@@ -28,26 +28,26 @@
     <meta name="msapplication-TileImage" content="~/Content/images/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <meta name="author" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai">
+    <meta name="author" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai, India">
     <meta name="keywords" content="digital agency, creative agency, SMO, SEO, SEM, programmatic media buying, analytics, website design, website development">
     <meta name="description" content="Sparkt is a collaboration of data sciences and emotional intelligence to bridge need gaps with creative and experiential solutions both for brands and consumers.">
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="SparktIndia">
-    <meta name="twitter:title" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai">
+    <meta name="twitter:site" content="Sparkt">
+    <meta name="twitter:title" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai, India">
     <meta name="twitter:description" content="Sparkt is a collaboration of data sciences and emotional intelligence to bridge need gaps with creative and experiential solutions both for brands and consumers.">
-    <meta name="twitter:creator" content="SparktIndia">
+    <meta name="twitter:creator" content="Sparkt">
     <meta name="twitter:image" content="~/Content/images/spaktLogoFB.jpg" />
     <!-- Open Graph data -->
-    <meta property="og:title" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai" />
+    <meta property="og:title" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai, India" />
     <meta property="og:url" content="http://www.sparkt.in" />
     <meta property="og:description" content="Sparkt is a collaboration of data sciences and emotional intelligence to bridge need gaps with creative and experiential solutions both for brands and consumers." />
-    <meta property="og:site_name" content="Sparkt India" />
+    <meta property="og:site_name" content="Sparkt" />
     <meta property="og:type" content="website" />
     <meta property="fb:admins" content="306588899709911" />
     <meta property="og:image" content="~/Content/images/spaktLogoFB.jpg" />
     <!-- Schema.org markup for Google+ -->
-    <meta itemprop="name" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai">
+    <meta itemprop="name" content="Sparkt | A Creative & Digital Marketing Agency in Mumbai, India">
     <meta itemprop="description" content="Sparkt is a collaboration of data sciences and emotional intelligence to bridge need gaps with creative and experiential solutions both for brands and consumers.">
     <!-- CSS -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
