--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -1334,7 +1334,7 @@
 
                             <div class="video-wrapp fadeRight" data-t-show="2">
                                 <video poster="~/Content/images/sparkt-content-showreel.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
-                                    <source src="https://youtu.be/gtgzaXu8tsA" type="video/youtube" />
+                                    <source src="https://youtu.be/BiWDL1zPwg4" type="video/youtube" />
                                 </video>
                             </div>
                         </div>
