--- a/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
@@ -39,7 +39,7 @@
     <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/plugins/malihu-custom-scrollbar/css/jquery.mCustomScrollbar.css" />
     <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/css/style.css" />
 </head>
-<body>
+<body class="@RenderSection("BodyClass", false)">
     <header>
         <a href="/" class="sparkt-logo"> <img src="~/Content/work/images/spaktLogo.png" alt="Sparkt" /> <img src="~/Content/work/images/spaktLogo-text.png" alt="Sparkt" class="sparkt-text" /> </a>
         <div class="hamburger">
