--- a/Sparkt.WebApp/Views/work/Ikyawann.cshtml
+++ b/Sparkt.WebApp/Views/work/Ikyawann.cshtml
@@ -7,7 +7,7 @@
     ViewBag.MetaURL = "http://sparkt.in/work/Ikyawann";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ikyawann-thum.jpg";
 }
-
+@section BodyClass {star-plus}
 <main>
     <div class="section">
         <div class="work-banner">
