--- a/Sparkt.WebApp/Views/work/MahindraBadhatYojana.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraBadhatYojana.cshtml
@@ -7,7 +7,7 @@
     ViewBag.MetaURL = "http://sparkt.in/work/MahindraBadhatYojana";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/badhat-yojana-thum.jpg";
 }
-
+@section BodyClass {mahindra}
 <main>
     <div class="section">
         <div class="work-banner">
