--- a/Sparkt.WebApp/Views/work/MahindraNfoLaunches.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraNfoLaunches.cshtml
@@ -7,7 +7,7 @@
     ViewBag.MetaURL = "http://sparkt.in/work/MahindraNfoLaunches";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/mmf-info-thum.jpg";
 }
-
+@section BodyClass {mahindra}
 <main>
     <div class="section">
         <div class="work-banner">
