--- a/Sparkt.WebApp/Views/work/OnePlus.cshtml
+++ b/Sparkt.WebApp/Views/work/OnePlus.cshtml
@@ -7,7 +7,7 @@
     ViewBag.MetaURL = "http://sparkt.in/work/OnePlus";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/oneplus-thum.jpg";
 }
-
+@section BodyClass {one-plus}
 <main>
     <div class="section">
         <div class="work-banner">
