--- a/Sparkt.WebApp/Views/work/Swp.cshtml
+++ b/Sparkt.WebApp/Views/work/Swp.cshtml
@@ -7,7 +7,7 @@
     ViewBag.MetaURL = "http://sparkt.in/work/Swp";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/swp-thum.jpg";
 }
-
+@section BodyClass {star}
 <main>
     <div class="section">
         <div class="work-banner">
