--- a/Sparkt.WebApp/Views/work/UCypher.cshtml
+++ b/Sparkt.WebApp/Views/work/UCypher.cshtml
@@ -7,7 +7,7 @@
     ViewBag.MetaURL = "http://sparkt.in/work/UCypher";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/ucypher-thum.jpg";
 }
-
+@section BodyClass {usports}
 <main>
     <div class="section">
         <div class="work-banner">
