--- a/Sparkt.WebApp/Views/work/bql.cshtml
+++ b/Sparkt.WebApp/Views/work/bql.cshtml
@@ -7,7 +7,7 @@
     ViewBag.MetaURL = "http://sparkt.in/work/bql";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/boutique-thum.jpg";
 }
-
+@section BodyClass {bql}
 <main>
     <div class="section">
         <div class="work-banner">
