--- a/Sparkt.WebApp/Views/work/DancePlus2.cshtml
+++ b/Sparkt.WebApp/Views/work/DancePlus2.cshtml
@@ -7,7 +7,7 @@
     ViewBag.MetaURL = "http://sparkt.in/work/DancePlus2";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/danceplus-thum.jpg";
 }
-
+@section BodyClass {star-plus}
 <main>
     <div class="section">
         <div class="work-banner">
