--- a/Sparkt.WebApp/Views/work/IndiaRF.cshtml
+++ b/Sparkt.WebApp/Views/work/IndiaRF.cshtml
@@ -7,7 +7,7 @@
     ViewBag.MetaURL = "http://sparkt.in/work/IndiaRF";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/india-rf-thum.jpg";
 }
-
+@section BodyClass {piramal}
 <main>
     <div class="section">
         <div class="work-banner">
