--- a/Sparkt.WebApp/Views/work/Kullfi.cshtml
+++ b/Sparkt.WebApp/Views/work/Kullfi.cshtml
@@ -7,7 +7,7 @@
     ViewBag.MetaURL = "http://sparkt.in/work/Kullfi";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/kullfi-thum.jpg";
 }
-
+@section BodyClass {star-plus}
 <main>
     <div class="section">
         <div class="work-banner">
