--- a/Sparkt.WebApp/Views/work/MahindraTextMoji.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraTextMoji.cshtml
@@ -7,7 +7,7 @@
     ViewBag.MetaURL = "http://sparkt.in/work/TextMoji";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/textmoji-thum.jpg";
 }
-
+@section BodyClass {mahindra}
 <main>
     <div class="section">
         <div class="work-banner">
