--- a/Sparkt.WebApp/Views/work/USportsHamburger.cshtml
+++ b/Sparkt.WebApp/Views/work/USportsHamburger.cshtml
@@ -7,7 +7,7 @@
     ViewBag.MetaURL = "http://sparkt.in/work/USportsHamburger";
     ViewBag.MetaImage = "http://sparkt.in/Content/work/images/thums/usports-hamburger-thum.jpg";
 }
-
+@section BodyClass {usports}
 <main>
     <div class="section">
         <div class="work-banner">
