--- a/Sparkt.WebApp/Views/work/brickex.cshtml
+++ b/Sparkt.WebApp/Views/work/brickex.cshtml
@@ -7,7 +7,7 @@
     ViewBag.MetaURL = "http://sparkt.in/work/brickex";
     ViewBag.MetaImage= "http://sparkt.in/Content/work/images/thums/brickex-thum.jpg";
 }
-
+@section BodyClass {piramal}
 <main>
     <div class="section">
         <div class="work-banner">
